# nexus-writer-backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  ELMISH.md  Makefile  PLAN.md  README.md  TODO.md  cron_worker.py  docker-compose.yml  extraction_worker.py  main.py  pyproject.toml  saq_worker.py  session_worker.py  summary_worker.py  worker.py  yoyo.ini
app/: models.py  worker.py
app/agents/: extraction.py  prose.py
app/ai/: __init__.py  character.py  character_bio.py  context.py  edits.py  plot.py  plot_thread.py  structure.py  structure_and_pacing.py  timeline.py  world.py  world_bible.py
app/background_jobs/: chapter.py
app/caches/: __init__.py  edits.py
app/channels/: analytics.py
app/config/: celery.py  lifespan.py  logging.py  prefect.py  settings.py
app/controllers/: auth.py  chapter.py  jobs.py  story.py  story_characters.py  story_plot.py  story_structure.py  story_targets.py  story_world.py
app/core/: database.py  mongodb.py  neo4j_db.py  redis.py  security.py
app/flows/: __init__.py  circuit_breaker.py  dlq.py
app/jobs/: chapter.py  session.py
app/middleware/: http_logging.py
app/playground/: html_parsing.py  readability_metrics.py
app/providers/: analytics.py  auth.py  chapter.py  jobs.py  story.py  target.py
app/schemas/: __init__.py  analytics.py  auth.py  chapter.py  character.py  jobs.py  plot.py  story.py  structure.py  target.py  world.py
app/services/: analytics.py  auth.py  chapter.py  character.py  character_tracker.py  jobs.py  plot.py  plot_tracker.py  story.py  structure.py  target.py  world.py
app/sync_jobs/: chapter.py  session.py
app/utils/: ai.py  decorators.py  html.py  lexical.py  logging.py  logging_context.py  retry.py
app/workers/: __init__.py  base.py
dev_scripts/: db_recreate.sh  dbshell.sh  init_db.sh  logs.sh  migrate.sh  migrate_fresh.sh  rebuild_api.sh  rebuild_backend.sh  reset_db.sh  shell.sh  start_api.sh  start_backend.sh  start_db.sh  stop_db.sh  upgrade.sh  yoyo.sh
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: AppRouter.tsx  index.css  main.tsx  router.tsx
logs/: app.jsonl
migrations/: env.py
migrations/models/: 0_20260402204712_init.py  0_20260419211627_init.py  0_20260426133819_init.py
migrations/versions/: 13a669dca120_removed_depracated_field.py  49fc1405a9b6_initial_schema.py  (+13 more)
playground/: extraction_performance_audit.md  html_parsing.py  readability_metrics.py
scripts/: test_ai_edit.py
src/: __init__.py
test/: test_ai_edit.http  test_analytics.http  test_auth.http  test_chapter_crud.http  test_e2e.http  test_story_crud.http  test_target_crud.http  test_unauthenticated.http
tests/: conftest.py  factories.py
(+523 files in other folders)
