[project]
name = "nexus-writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.1",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "boto3>=1.39.14",
    "bs4>=0.0.2",
    "cryptography>=45.0.3",
    "duckdb>=1.3.2",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "langchain[google-genai]>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-neo4j>=0.6.0",
    "langchain-openai>=1.0.1",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "passlib>=1.7.4",
    "prefect>=3.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-socketio>=5.13.0",
    "redis[hiredis]>=4.2.0,<6",
    "socketio>=0.2.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
    "toonify>=1.5.1",
    "motor>=3.7.1",
    "pymongo>=4.16.0",
    "langgraph>=1.0.4",
]
